Cherry-pick 948e6208a6dc. rdar://168046597

WebCodecs VideoDecoder Outputs Frames in Incorrect Order
    rdar://145093697
    https://bugs.webkit.org/show_bug.cgi?id=287516

    Reviewed by Jean-Yves Avenard.

    H264 reorder size can be computed from the SPS found in the avcc record.
    Before parsing the SPS, we need to remove emulation prevention byte, like is already done for H265.

    We add a test to cover this.

    We also add a test that shows that we should in theory not use the web codec provided timestamp to reorder frames.
    Instead, as per spec, we should use the pic order count.
    The added test fails in WebKit, but succeeds in Chrome (it also fails in Firefox).

    Canonical link: https://commits.webkit.org/305475@main

Identifier: 305413.136@safari-7624-branch